--- a/ROS_ImageUtils/GenericImage.xaml
+++ b/ROS_ImageUtils/GenericImage.xaml
@@ -15,6 +15,6 @@
                 <ImageBrush x:Name="image" />
             </Rectangle.Fill>
         </Rectangle>
-        <Label Name="fps" VerticalAlignment="Top" HorizontalAlignment="Right" Opacity="0.5" Background="Black" Foreground="Yellow" Padding="3" FontSize="20" FontWeight="DemiBold">FPS</Label>
+        <Label Name="fps" VerticalAlignment="Top" HorizontalAlignment="Right" Opacity="0.5" Background="Black" Foreground="Yellow" Padding="3" FontSize="20" FontWeight="DemiBold" x:FieldModifier="public">FPS</Label>
     </Grid>
 </UserControl>
