--- a/DynamicReconfigureSharp/DynamicReconfigureSlider.xaml
+++ b/DynamicReconfigureSharp/DynamicReconfigureSlider.xaml
@@ -16,7 +16,7 @@
             <ColumnDefinition Width="0.25*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Label Name="description" Grid.Column="0">Description</Label>
-        <Grid Name="numberline" Grid.Column="1" VerticalAlignment="Stretch">
+        <Grid Name="numberline" Grid.Column="1" >
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"></ColumnDefinition>
                 <ColumnDefinition Width="*"></ColumnDefinition>
