--- a/DynamicReconfigureSharp/DynamicReconfigureStringBox.xaml
+++ b/DynamicReconfigureSharp/DynamicReconfigureStringBox.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="DynamicReconfigureSharp.DynamicReconfigureStringDropdown"
+﻿<UserControl x:Class="DynamicReconfigureSharp.DynamicReconfigureStringBox"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -9,12 +9,11 @@
     </UserControl.ToolTip>
     <Grid Height="auto">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"></ColumnDefinition>
-            <ColumnDefinition Width="Auto"></ColumnDefinition>
+            <ColumnDefinition Width="0.33*"></ColumnDefinition>
+            <ColumnDefinition Width="0.66*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Label Name="description">Description</Label>
-        <ComboBox Name="enum" Grid.Column="1" SelectionChanged="Enum_OnSelectionChanged">
-            <ComboBoxItem IsSelected="True">Yeah fucking right</ComboBoxItem>
-        </ComboBox>
+        <TextBox Name="Box" Grid.Column="1" MinWidth="100" HorizontalAlignment="Stretch" KeyDown="Box_OnKeyDown" LostFocus="Box_OnLostFocus"  >
+        </TextBox>
     </Grid>
 </UserControl>
