--- a/DynamicReconfigureSharp/DynamicReconfigureGroup.xaml
+++ b/DynamicReconfigureSharp/DynamicReconfigureGroup.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-        <GroupBox Header="Group" Name="container" Margin="5" >
+        <!--<GroupBox Header="Group" Name="container" Margin="5" >-->
             <StackPanel Name="paramsHolder"></StackPanel>
-        </GroupBox>
+        <!--</GroupBox>-->
 </UserControl>
