DynamicReconfigure: Expose an instrumentation interface to allow bi-directional state sharing between a DynamicReconfigurePage and another UIElement
And redo layouts so everything matches ROS's dynamic_reconfigure's except for window auto-sizing and styling.

--- a/DynamicReconfigureSharp/DynamicReconfigureCheckbox.xaml
+++ b/DynamicReconfigureSharp/DynamicReconfigureCheckbox.xaml
@@ -11,8 +11,9 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"></ColumnDefinition>
             <ColumnDefinition Width="Auto"></ColumnDefinition>
+            <ColumnDefinition Width="Auto"></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <Label Name="description">Description</Label>
-        <CheckBox Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" Name="_checkBox" Margin="2" Checked="_checkBox_OnChecked" Unchecked="_checkBox_OnUnchecked"></CheckBox>
+        <Label Name="description" HorizontalAlignment="Right">Description</Label>
+        <CheckBox Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Center" Name="_checkBox" Margin="2" Checked="_checkBox_OnChecked" Unchecked="_checkBox_OnUnchecked"></CheckBox>
     </Grid>
 </UserControl>
