--- a/DynamicReconfigureSharp/DynamicReconfigurePage.xaml
+++ b/DynamicReconfigureSharp/DynamicReconfigurePage.xaml
@@ -5,6 +5,5 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300" Height="Auto" Width="Auto">
-    <Grid Name="GroupHolder">
-    </Grid>
+    <Grid Name="GroupHolder" />
 </UserControl>
