--- a/ROS_ImageUtils/CompressedImageControl.xaml
+++ b/ROS_ImageUtils/CompressedImageControl.xaml
@@ -9,7 +9,7 @@
         <ros:GenericImage x:Name="guts" x:FieldModifier="public"/>
         <Canvas Name="ROI_Container" RenderTransformOrigin="0.5,0.5" >
             <Canvas.RenderTransform>
-                <ScaleTransform ScaleY="-1"></ScaleTransform>
+                <ScaleTransform ScaleY="-1" />
             </Canvas.RenderTransform>
         </Canvas>
     </Grid>
