--- a/ROS_ImageUtils/SlaveImage.xaml
+++ b/ROS_ImageUtils/SlaveImage.xaml
@@ -11,7 +11,7 @@
         <RosImageWpf:GenericImage x:Name="guts" x:FieldModifier="public" />
         <Canvas Name="ROI_Container" RenderTransformOrigin="0.5,0.5" x:FieldModifier="public">
             <Canvas.RenderTransform>
-                <ScaleTransform ScaleY="-1"></ScaleTransform>
+                <ScaleTransform ScaleY="-1" />
             </Canvas.RenderTransform>
         </Canvas>
     </Grid>
