--- a/DynamicReconfigureSharp/MainWindow.xaml
+++ b/DynamicReconfigureSharp/MainWindow.xaml
@@ -6,10 +6,12 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <ComboBox Name="TargetBox" Grid.Row="0" SelectionChanged="TargetBox_OnSelectionChanged" SelectedIndex="0">
             None
         </ComboBox>
         <Grid Name="PageContainer" Grid.Row="1" />
+        <Label Name="ConnecitonLabel" Grid.Row="2" >Not connected..</Label>
     </Grid>
 </Window>
