DynamicReconfigureSharp: make sorting automagic

--- a/DynamicReconfigureSharp/MainWindow.xaml
+++ b/DynamicReconfigureSharp/MainWindow.xaml
@@ -8,9 +8,7 @@
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <ComboBox Name="TargetBox" Grid.Row="0" SelectionChanged="TargetBox_OnSelectionChanged" SelectedIndex="0">
-            None
-        </ComboBox>
+        <ComboBox Name="TargetBox" Grid.Row="0" SelectionChanged="TargetBox_OnSelectionChanged" SelectedIndex="0" IsReadOnly="True" VerticalContentAlignment="Bottom" />
         <Grid Name="PageContainer" Grid.Row="1" />
         <Label Name="ConnecitonLabel" Grid.Row="2" >Not connected..</Label>
     </Grid>
