--- a/DynamicReconfigureSharp/MainWindow.xaml
+++ b/DynamicReconfigureSharp/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="DynamicReconfigureTest.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Dynamic Reconfigure #" Height="200" Width="300">
+        Title="Dynamic Reconfigure #" Height="200" Width="300" Closing="Window_Closing">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
