--- a/ROS_ImageUtils/CompressedImageControl.xaml
+++ b/ROS_ImageUtils/CompressedImageControl.xaml
@@ -1,16 +1,9 @@
 ﻿<UserControl x:Class="ROS_ImageWPF.CompressedImageControl"
-                     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"        
-                     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-                     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:ros="clr-namespace:ROS_ImageWPF"
-                     mc:Ignorable="d" Loaded="UserControl_Loaded" SizeChanged="UserControl_SizeChanged" >
-    <Grid SnapsToDevicePixels="True">
-        <ros:GenericImage x:Name="guts" x:FieldModifier="public"/>
-        <Canvas Name="ROI_Container" RenderTransformOrigin="0.5,0.5" >
-            <Canvas.RenderTransform>
-                <ScaleTransform ScaleY="-1" />
-            </Canvas.RenderTransform>
-        </Canvas>
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                      xmlns:RosImageWpf="clr-namespace:ROS_ImageWPF"
+                      SnapsToDevicePixels="True">
+    <Grid SnapsToDevicePixels="True" >
+        <RosImageWpf:GenericImage x:Name="mGenericImage" />
     </Grid>
 </UserControl>
