--- a/ROS_ImageUtils/CompressedImageControl.xaml
+++ b/ROS_ImageUtils/CompressedImageControl.xaml
@@ -4,6 +4,6 @@
                       xmlns:RosImageWpf="clr-namespace:ROS_ImageWPF"
                       SnapsToDevicePixels="True">
     <Grid SnapsToDevicePixels="True" >
-        <RosImageWpf:GenericImage x:Name="mGenericImage" x:FieldModifier="public" />
+        <RosImageWpf:GenericImage x:Name="mGenericImage" />
     </Grid>
 </UserControl>
